# parking-system

./: .gitignore  settings.gradle.kts
androidApp/: build.gradle.kts
desktopApp/: build.gradle.kts
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
parking-system/: .editorconfig  .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
parking-system/.github/workflows/: ci-kotlin.yml  ci-python.yml  ci-web-admin.yml
parking-system/ai-service/: Dockerfile  pyproject.toml
parking-system/ai-service/app/: __init__.py  main.py
parking-system/ai-service/app/api/: anti_fraud.py  forecasting.py  health.py  lpr.py  reports.py
parking-system/ai-service/app/core/: config.py  ml_loader.py
parking-system/ai-service/app/ml/lpr/: detector.py  recognizer.py
parking-system/ai-service/tests/: test_smoke.py
parking-system/backend/: build.gradle.kts
parking-system/composeApp/: build.gradle.kts
parking-system/docs/api/: openapi.yaml
parking-system/docs/architecture/: README.md  system-overview.md
parking-system/docs/audit/: code-inventory.md
parking-system/docs/decisions/: ADR-001-kmp-choice.md  ADR-002-python-for-ai.md  ADR-003-offline-first.md  ADR-004-sync-strategy.md
parking-system/docs/deployment/: README.md
parking-system/gradle/: gradle-daemon-jvm.properties  libs.versions.toml
parking-system/iosApp/: README.md
parking-system/shared/: build.gradle.kts
parking-system/web-admin/: next.config.mjs  package.json  tailwind.config.ts
shared/: build.gradle.kts
(+217 files in other folders)
