[project]
name = "parking-ai-service"
version = "1.0.0"
description = "Microservicio de IA para reconocimiento de placas (LPR), forecast y antifraude"
requires-python = ">=3.11"
authors = [{ name = "Parking System Team" }]
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "python-multipart==0.0.17",
    "opencv-python==4.10.0.84",
    "numpy==2.1.3",
    "Pillow==11.0.0",
    "ultralytics==8.3.27",         # YOLOv8/v11
    "paddleocr==2.8.1",
    "paddlepaddle==2.6.2",
    "scikit-learn==1.5.2",
    "pandas==2.2.3",
    "loguru==0.7.2",
    "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.7.4",
    "mypy==1.13.0",
    "httpx==0.27.2",
]

[tool.ruff]
target-version = "py311"
line-length = 110
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
